...
                    android:background="@drawable/box_detail_view"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name Loading..."
                        android:textColor="@color/title"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
...
