<resources>
    <string name="app_name">Pokemon Yelp</string>
    <string name="search_button_name">Search</string>
    <string name="check_network">check network connection</string>
    <string name="capture_button">Catch the Pokemon</string>
</resources>
