<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/vertical_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/machine_vertical"
    android:orientation="vertical"
    tools:context="pokeyelp.grat.team.pokemonyelp.activity_collection.CollectionActivity">

    <include layout="@layout/toolbar_layout"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/collection_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
